--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+.nav {
+    border-bottom: 6px solid #dddddd;
+}
+
 header {
     background:#4aaaa5;
     float: left;
@@ -5,18 +9,19 @@ header {
     display: block;
     color: #ffffff;
     text-align: center;
-    padding: 14px 16px;
+    padding: 25px;
     text-decoration: none;
-    border-bottom: 3px solid #dddddd;
   }
 
 h2 {
-      font-family: 'Lucida Sans', sans-serif;
+      font-family: 'Times New Roman', Times, serif;
+      font-size: 30px;
       color: #4aaaa5;
+      padding: 20px;
   }
   
 .about_me_content {
-    height: 1000px;
+    height: 850px;
     width: 960px;
     background-color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
@@ -24,6 +29,19 @@ h2 {
     border-color: #dddddd;
     border-width: 3px;
     margin: 0 auto;
+    line-height: 30px;
+    margin-bottom: 90px;
+}
+
+p {
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(80, 79, 79);
+}
+
+img {
+    float: left;
+    padding: 20px;
 }
 
 ul {
@@ -54,5 +72,16 @@ ul {
   }
 
 #top_bar {
-    background-color: green;
+    background-image: url(../images/light_grey.png);
+    background-repeat: repeat;
+}
+
+footer {
+    display: block;
+    color: white;
+    background: grey;
+    border-top: 8px solid #4aaaa5;
+    padding: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
