--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,40 @@
 .nav {
     border-bottom: 6px solid #dddddd;
+    display: block;
+    color: #ffffff;
+    padding: 25px;
+}
+form {
+    margin-left: 25px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+input[type=text] {
+    width: 90%;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+  input[type=email] {
+    width: 90%;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+  input[type=message] {
+    width: 90%;
+    padding: 100px;
+    box-sizing: border-box;
+  }
+.button {
+  background-color: #4aaaa5;;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 header {
@@ -7,10 +42,10 @@ header {
     float: left;
     font-family: 'Lucida Sans', sans-serif;
     display: block;
-    color: #ffffff;
     text-align: center;
     padding: 25px;
     text-decoration: none;
+    margin-left: 100px;
   }
 
 h2 {
@@ -20,7 +55,7 @@ h2 {
       padding: 20px;
   }
   
-.about_me_content {
+.primary-content {
     height: 850px;
     width: 960px;
     background-color: #ffffff;
@@ -31,6 +66,7 @@ h2 {
     margin: 0 auto;
     line-height: 30px;
     margin-bottom: 90px;
+    margin-top: 30px;
 }
 
 p {
@@ -51,6 +87,7 @@ ul {
     overflow: hidden;
     background-color:whitesmoke;
     border-bottom: grey;
+    text-anchor: middle;
   }
   
   li {
@@ -60,6 +97,7 @@ ul {
 
   li:first-child {
     border-right: none;
+    margin-right: 100px;
   }
   
   li a {
@@ -84,4 +122,11 @@ footer {
     padding: 25px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 5vw);
+    grid-gap: 15px;
 }
